recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:8: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Byte)Int
match expected type ?
    left(2.*angle)
           ^